--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Lada Largus</h3>
-                        <p>Первая работа. Чистка ковролина</p>
+                        <p>Химчистка салона</p>
                     </div>
                 </div>
 
@@ -242,7 +242,7 @@
                     </div>
                     <div class="portfolio-overlay">
                         <h3>Renault Arkana</h3>
-                        <p>Очистка всего пластика.</p>
+                        <p>Химчистка салона</p>
                     </div>
                 </div>
 
@@ -259,8 +259,8 @@
                         </div>
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Audi Q7</h3>
-                        <p>Подготовка кузова и нанесение керамического покрытия. Глубокий глянец и защита ЛКП.</p>
+                        <h3>Will be later</h3>
+                        <p>TODO</p>
                     </div>
                 </div>
 
@@ -277,8 +277,8 @@
                         </div>
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>VW Passat</h3>
-                        <p>Химчистка салона. Восстановление чистоты сидений, ковров и пластиковых элементов.</p>
+                        <h3>Will be later</h3>
+                        <p>TODO</p>
                     </div>
                 </div>
 
@@ -295,8 +295,8 @@
                         </div>
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Lada Vesta</h3>
-                        <p>Многоступенчатая полировка. Удаление мелких царапин и восстановление блеска.</p>
+                        <h3>Will be later</h3>
+                        <p>TODO</p>
                     </div>
                 </div>
 
@@ -313,8 +313,8 @@
                         </div>
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Kia Sportage</h3>
-                        <p>Подготовка и нанесение керамики. Выраженный гидрофобный эффект и защита от грязи.</p>
+                        <h3>Will be latere</h3>
+                        <p>TODO</p>
                     </div>
                 </div>
 
