--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Анастасия Гапочкина</h1>
-            <p>Детейлер-стажер (Ростов-на-Дону). Химчистка, полировка, керамика. Ищу место в студии.</p>
+            <p>Начинающий детейлер. Химчистка, полировка, керамика. Ищу место в студии.</p>
             <img src="hero-photo.jpg" alt="Фото мастера" class="hero-photo">
         </div>
     </section>
