--- a/index.html
+++ b/index.html
@@ -323,6 +323,32 @@
         </div>
     </section>
 
+    <!-- НОВАЯ СЕКЦИЯ КОНТАКТОВ -->
+<section id="contacts" class="contacts">
+<div class="container">
+<h2>Контакты</h2>
+<div class="contacts-content">
+<p style="font-size: 1.3rem; margin-bottom: 2rem;">Готова к сотрудничеству! Свяжитесь со мной любым удобным способом</p>
+<div class="contact-info">
+<div class="contact-item">
+<div class="contact-icon">📱</div>
+<h3>Телефон</h3>
+<p><a href="tel:+79189225008">+7 (918) 922-50-08</a></p>
+<p>Звонки</p>
+</div>
+<div class="contact-item">
+<div class="contact-icon">✈️</div>
+<h3>Telegram</h3>
+<p><a href="https://t.me/anestesia_01" target="_blank">@anestesia_01</a></p>
+<p>Быстрый способ связи</p>
+</div>
+
+</div>
+
+</div>
+</div>
+</section>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Анастасия Гапочкина. Все права защищены.</p>
