--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
                     <h3>Полировка кузова</h3>
                     <p>Устранение мелких царапин, блеск как у нового авто.</p>
                 </div>
-                <!-- 
+                
                 <div class="service-card">
                     <h3>Нанесение керамики</h3>
-                    <p>Долговременная защита от грязи и УФ. Гидрофобный эффект!</p>
+                    <p>Долговременная защита от грязи и УФ. Гидрофобный эффект.</p>
                 </div>
-               -->
+               
             </div>
         </div>
     </section>
@@ -266,24 +266,24 @@
                     </div>
                 </div>
 
-                <!-- VW 
+                <!-- Газель полировка -->
                 <div class="portfolio-item">
                     <div class="portfolio-photos">
                         <div class="before">
-                            <img src="vw-before.jpg" alt="">
+                            <img src="gaz_before.jpeg" alt="">
                             <span class="label">До</span>
                         </div>
                         <div class="after">
-                            <img src="vw-after.jpg" alt="">
+                            <img src="gaz_after.jpeg" alt="">
                             <span class="label">После</span>
                         </div>
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Will be later</h3>
-                        <p>TODO</p>
+                        <h3>Газель бизнес</h3>
+                        <p>Полировка кузова</p>
                     </div>
                 </div>
-
+ <!--
                 <div class="portfolio-item">
                     <div class="portfolio-photos">
                         <div class="before">
